--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
 <body>
     <nav>
         <div class="logo-area">
-            <span class="material-icons-outlined">
+            <span class="material-icons">
                 menu
-                </span>
+            </span>
             <img class="gb_yc gb_5d" src="https://www.gstatic.com/images/branding/product/1x/keep_2020q4_48dp.png" srcset="https://www.gstatic.com/images/branding/product/1x/keep_2020q4_48dp.png 1x, https://www.gstatic.com/images/branding/product/2x/keep_2020q4_48dp.png 2x " alt="" aria-hidden="true" role="presentation" style="width:40px;height:40px">
-            <span>Keep</span>
+            <span class="logo-text">Keep</span>
 
         </div>
         <div class="search-area">
-            <span class="material-icons-outlined">
+            <span class="material-icons">
                 search
-                </span>
-            <input type="text">
+            </span>
+            <input type="text" placeholder="search">
         </div>
         <div class="setting-area">
             <span class="material-icons">
                 refresh
-                </span>
-                <span class="material-icons">
-                    view_agenda
-                    </span>
+            </span>
+            <span class="material-icons">
+                view_agenda
+            </span>
             <span class="material-icons">
                 settings
-                </span>
+            </span>
         </div>
         <div class="profile-action-area">
             <span class="material-icons">
-                apps
-                </span>
-                <span class="material-icons-outlined">
-                    account_circle
-                    </span>
+            apps
+            </span>
+            <span class="material-icons">
+                account_circle
+            </span>
         </div>
 
 
