--- a/index.html
+++ b/index.html
@@ -70,8 +70,16 @@
             </div>
                 
         </div>
-
-
     </nav>
+    <main>
+        <div class="sidebar">
+            <span class="material-icons hover">lightbulb</span>
+            <span class="material-icons">notifications</span>
+            <span class="material-icons hover">apps</span>
+            <span class="material-icons hover">apps</span>
+            <span class="material-icons hover">apps</span>
+        </div>
+        <div class="form-container"></div>
+    </main>
 </body>
 </html>
