--- a/index.html
+++ b/index.html
@@ -73,13 +73,31 @@
     </nav>
     <main>
         <div class="sidebar">
-            <span class="material-icons hover">lightbulb</span>
-            <span class="material-icons">notifications</span>
-            <span class="material-icons hover">apps</span>
-            <span class="material-icons hover">apps</span>
-            <span class="material-icons hover">apps</span>
+            <div class="sidebar-items">
+                <span class="material-icons hover active">lightbulb</span>
+                <span class="sidebar-text">Notes</span>
+            </div>
+            <div class="sidebar-items">
+                <span class="material-icons hover">notifications</span>
+                <span class="sidebar-text">Reminders</span>
+            </div>
+            <div class="sidebar-items">
+                <span class="material-icons hover">edit</span>
+                <span class="sidebar-text">Edit labels</span>
+            </div>
+            <div class="sidebar-items">
+                <span class="material-icons hover">archive</span>
+                <span class="sidebar-text">Archive</span>
+            </div>
+            <div class="sidebar-items">
+                <span class="material-icons hover">delete</span>
+                <span class="sidebar-text">Trash</span>
+            </div>
+            
+        <div class="form-container">
+
         </div>
-        <div class="form-container"></div>
+
     </main>
 </body>
 </html>
