--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
         </div>
         <div class="search-area">
-
             <div class="tooltip">
                 <span class="material-icons hover">
                     search
                 </span>
-                <span class="tooltip-text">search</span>  
+                <span class="tooltip-text">search</span> 
             </div>
+            <input type="text" placeholder="search">
         </div>
         <div class="setting-area">
             <div class="tooltip">
@@ -93,8 +93,32 @@
                 <span class="material-icons hover">delete</span>
                 <span class="sidebar-text">Trash</span>
             </div>
+        </div>
             
         <div class="form-container">
+            <form>
+               <input class="note-text" type="text" placeholder="Take a note....">
+               <div class="form-actions">
+                <div class="tooltip">
+                    <span class="material-icons hover">
+                        check_box
+                    </span>
+                    <span class="tooltip-text">New list</span>
+                </div>
+                <div class="tooltip">
+                    <span class="material-icons hover">
+                        brush
+                    </span>
+                    <span class="tooltip-text">New note with drawing</span>
+                </div>
+                <div class="tooltip">
+                    <span class="material-icons hover">
+                        image
+                    </span>
+                    <span class="tooltip-text">New note with drawing</span>
+                </div>
+               </div> 
+            </form>
 
         </div>
 
