--- a/index.html
+++ b/index.html
@@ -180,9 +180,196 @@
                </div> 
             </form>
         </div>
+        <div class="notes">
+            <div class="note">
+                <span class="material-icons check-circle">
+                    check_circle
+                    </span>
+                <div class="title">Title</div>
+                <div class="text">Text</div>
+                <div class="note-footer">
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            add_alert
+                        </span>
+                        <span class="tooltip-text">Remind me</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            person_add
+                        </span>
+                        <span class="tooltip-text">Collaborator</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            color_lens
+                        </span>
+                        <span class="tooltip-text">Background options</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            image
+                        </span>
+                        <span class="tooltip-text">Add image</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            archive
+                        </span>
+                        <span class="tooltip-text">Archive</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            more_vert
+                        </span>
+                        <span class="tooltip-text">More</span>
+                    </div>
+                </div>
+            </div>
+            <div class="note">
+                <span class="material-icons check-circle">
+                    check_circle
+                    </span>
+                <div class="title">Title</div>
+                <div class="text">Text</div>
+                <div class="note-footer">
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            add_alert
+                        </span>
+                        <span class="tooltip-text">Remind me</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            person_add
+                        </span>
+                        <span class="tooltip-text">Collaborator</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            color_lens
+                        </span>
+                        <span class="tooltip-text">Background options</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            image
+                        </span>
+                        <span class="tooltip-text">Add image</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            archive
+                        </span>
+                        <span class="tooltip-text">Archive</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            more_vert
+                        </span>
+                        <span class="tooltip-text">More</span>
+                    </div>
+                </div>
+            </div>
+            <div class="note">
+                <span class="material-icons check-circle">
+                    check_circle
+                    </span>
+                <div class="title">Title</div>
+                <div class="text">Text</div>
+                <div class="note-footer">
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            add_alert
+                        </span>
+                        <span class="tooltip-text">Remind me</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            person_add
+                        </span>
+                        <span class="tooltip-text">Collaborator</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            color_lens
+                        </span>
+                        <span class="tooltip-text">Background options</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            image
+                        </span>
+                        <span class="tooltip-text">Add image</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            archive
+                        </span>
+                        <span class="tooltip-text">Archive</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            more_vert
+                        </span>
+                        <span class="tooltip-text">More</span>
+                    </div>
+                </div>
+            </div>
+            <div class="note">
+                <span class="material-icons check-circle">
+                    check_circle
+                    </span>
+                <div class="title">Title</div>
+                <div class="text">Text</div>
+                <div class="note-footer">
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            add_alert
+                        </span>
+                        <span class="tooltip-text">Remind me</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            person_add
+                        </span>
+                        <span class="tooltip-text">Collaborator</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            color_lens
+                        </span>
+                        <span class="tooltip-text">Background options</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            image
+                        </span>
+                        <span class="tooltip-text">Add image</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            archive
+                        </span>
+                        <span class="tooltip-text">Archive</span>
+                    </div>
+                    <div class="tooltip">
+                        <span class="material-icons hover small-icons">
+                            more_vert
+                        </span>
+                        <span class="tooltip-text">More</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="model">
+            <div class="model-content">
 
-
-
+            </div>
+        </div>
     </main>
 </body>
 </html>
+
+
+
