--- a/index.html
+++ b/index.html
@@ -362,9 +362,68 @@
                 </div>
             </div>
         </div>
-        <div class="model">
-            <div class="model-content">
-
+        <div class="modal">
+            <div class="modal-content">
+                <div class="form-container active-form">
+                    <form>
+                        <input type="text" class="note-title" placeholder="Title">
+                       <input class="note-text" type="text" placeholder="Take a note....">
+                       <div class="form-actions">
+                        <div class="icons">
+                            <div class="tooltip">
+                                <span class="material-icons hover small-icons">
+                                    add_alert
+                                </span>
+                                <span class="tooltip-text">Remind me</span>
+                            </div>
+                            <div class="tooltip">
+                                <span class="material-icons hover small-icons">
+                                    person_add
+                                </span>
+                                <span class="tooltip-text">Collaborator</span>
+                            </div>
+                            <div class="tooltip">
+                                <span class="material-icons hover small-icons">
+                                    color_lens
+                                </span>
+                                <span class="tooltip-text">Background options</span>
+                            </div>
+                            <div class="tooltip">
+                                <span class="material-icons hover small-icons">
+                                    image
+                                </span>
+                                <span class="tooltip-text">Add image</span>
+                            </div>
+                            <div class="tooltip">
+                                <span class="material-icons hover small-icons">
+                                    archive
+                                </span>
+                                <span class="tooltip-text">Archive</span>
+                            </div>
+                            <div class="tooltip">
+                                <span class="material-icons hover small-icons">
+                                    more_vert
+                                </span>
+                                <span class="tooltip-text">More</span>
+                            </div>
+                            <div class="tooltip">
+                                <span class="material-icons hover small-icons">
+                                    undo
+                                </span>
+                                <span class="tooltip-text">undo</span>
+                            </div>
+                            <div class="tooltip">
+                                <span class="material-icons hover small-icons">
+                                    redo
+                                </span>
+                                <span class="tooltip-text">redo</span>
+                            </div>
+                        </div>
+                        <button class="close-btn">Close</button>
+                       </div> 
+                    </form>
+                </div>
+                
             </div>
         </div>
     </main>
