--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
         </div>
             
-        <div class="form-container">
+        <div class="form-container inactive-form">
             <form>
                <input class="note-text" type="text" placeholder="Take a note....">
                <div class="form-actions">
