--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         </div>
         <div class="form-container active-form">
             <form>
-                <input type="text" class="note-title" placeholder="Ttitle">
-               <input class="note-text" type="text" placeholder="Take a note....">
+                <input id="note-title" type="text" class="note-title" placeholder="Title">
+               <input id="note-text" class="note-text" type="text" placeholder="Take a note....">
                <div class="form-actions">
                 <div class="icons">
                     <div class="tooltip">
@@ -427,6 +427,7 @@
             </div>
         </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cuid/2.1.6/browser-cuid.min.js" referrerpolicy="no-referrer"></script><script src="/notes.js"></script>
     <script src="/notes.js"></script>
 </body>
 </html>
