--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 
         </div>
         <div class="form-container active-form">
-            <form>
+            <form class="form" id="form">
                 <input id="note-title" type="text" class="note-title" placeholder="Title">
-               <input id="note-text" class="note-text" type="text" placeholder="Take a note....">
-               <div class="form-actions">
+                <input id="note-text" class="note-text" type="text" placeholder="Take a note....">
+                <div class="form-actions">
                 <div class="icons">
                     <div class="tooltip">
                         <span class="material-icons hover small-icons">
@@ -180,254 +180,71 @@
                </div> 
             </form>
         </div>
-        <div class="notes">
-            <div class="note">
-                <span class="material-icons check-circle">
-                    check_circle
-                    </span>
-                <div class="title">Title</div>
-                <div class="text">Text</div>
-                <div class="note-footer">
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            add_alert
-                        </span>
-                        <span class="tooltip-text">Remind me</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            person_add
-                        </span>
-                        <span class="tooltip-text">Collaborator</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            color_lens
-                        </span>
-                        <span class="tooltip-text">Background options</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            image
-                        </span>
-                        <span class="tooltip-text">Add image</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            archive
-                        </span>
-                        <span class="tooltip-text">Archive</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            more_vert
-                        </span>
-                        <span class="tooltip-text">More</span>
-                    </div>
-                </div>
-            </div>
-            <div class="note">
-                <span class="material-icons check-circle">
-                    check_circle
-                    </span>
-                <div class="title">Title</div>
-                <div class="text">Text</div>
-                <div class="note-footer">
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            add_alert
-                        </span>
-                        <span class="tooltip-text">Remind me</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            person_add
-                        </span>
-                        <span class="tooltip-text">Collaborator</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            color_lens
-                        </span>
-                        <span class="tooltip-text">Background options</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            image
-                        </span>
-                        <span class="tooltip-text">Add image</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            archive
-                        </span>
-                        <span class="tooltip-text">Archive</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            more_vert
-                        </span>
-                        <span class="tooltip-text">More</span>
-                    </div>
-                </div>
-            </div>
-            <div class="note">
-                <span class="material-icons check-circle">
-                    check_circle
-                    </span>
-                <div class="title">Title</div>
-                <div class="text">Text</div>
-                <div class="note-footer">
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            add_alert
-                        </span>
-                        <span class="tooltip-text">Remind me</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            person_add
-                        </span>
-                        <span class="tooltip-text">Collaborator</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            color_lens
-                        </span>
-                        <span class="tooltip-text">Background options</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            image
-                        </span>
-                        <span class="tooltip-text">Add image</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            archive
-                        </span>
-                        <span class="tooltip-text">Archive</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            more_vert
-                        </span>
-                        <span class="tooltip-text">More</span>
-                    </div>
-                </div>
-            </div>
-            <div class="note">
-                <span class="material-icons check-circle">
-                    check_circle
-                    </span>
-                <div class="title">Title</div>
-                <div class="text">Text</div>
-                <div class="note-footer">
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            add_alert
-                        </span>
-                        <span class="tooltip-text">Remind me</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            person_add
-                        </span>
-                        <span class="tooltip-text">Collaborator</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            color_lens
-                        </span>
-                        <span class="tooltip-text">Background options</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            image
-                        </span>
-                        <span class="tooltip-text">Add image</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            archive
-                        </span>
-                        <span class="tooltip-text">Archive</span>
-                    </div>
-                    <div class="tooltip">
-                        <span class="material-icons hover small-icons">
-                            more_vert
-                        </span>
-                        <span class="tooltip-text">More</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal">
+        <div class="notes"></div>
+
+        <div class="modal open-modal">
             <div class="modal-content">
-                <div class="form-container active-form">
-                    <form>
-                        <input type="text" class="note-title" placeholder="Title">
-                       <input class="note-text" type="text" placeholder="Take a note....">
-                       <div class="form-actions">
-                        <div class="icons">
-                            <div class="tooltip">
-                                <span class="material-icons hover small-icons">
-                                    add_alert
-                                </span>
-                                <span class="tooltip-text">Remind me</span>
+                <div class="form-container">
+                        <form class="form" id="modal-form">
+                            <input type="text" class="note-title" placeholder="Title">
+                            <input class="note-text" type="text" placeholder="Take a note....">
+                            <div class="form-actions">
+                            <div class="icons">
+                                <div class="tooltip">
+                                    <span class="material-icons hover small-icons">
+                                        add_alert
+                                    </span>
+                                    <span class="tooltip-text">Remind me</span>
+                                </div>
+                                <div class="tooltip">
+                                    <span class="material-icons hover small-icons">
+                                        person_add
+                                    </span>
+                                    <span class="tooltip-text">Collaborator</span>
+                                </div>
+                                <div class="tooltip">
+                                    <span class="material-icons hover small-icons">
+                                        color_lens
+                                    </span>
+                                    <span class="tooltip-text">Background options</span>
+                                </div>
+                                <div class="tooltip">
+                                    <span class="material-icons hover small-icons">
+                                        image
+                                    </span>
+                                    <span class="tooltip-text">Add image</span>
+                                </div>
+                                <div class="tooltip">
+                                    <span class="material-icons hover small-icons">
+                                        archive
+                                    </span>
+                                    <span class="tooltip-text">Archive</span>
+                                </div>
+                                <div class="tooltip">
+                                    <span class="material-icons hover small-icons">
+                                        more_vert
+                                    </span>
+                                    <span class="tooltip-text">More</span>
+                                </div>
+                                <div class="tooltip">
+                                    <span class="material-icons hover small-icons">
+                                        undo
+                                    </span>
+                                    <span class="tooltip-text">undo</span>
+                                </div>
+                                <div class="tooltip">
+                                    <span class="material-icons hover small-icons">
+                                        redo
+                                    </span>
+                                    <span class="tooltip-text">redo</span>
+                                </div>
                             </div>
-                            <div class="tooltip">
-                                <span class="material-icons hover small-icons">
-                                    person_add
-                                </span>
-                                <span class="tooltip-text">Collaborator</span>
-                            </div>
-                            <div class="tooltip">
-                                <span class="material-icons hover small-icons">
-                                    color_lens
-                                </span>
-                                <span class="tooltip-text">Background options</span>
-                            </div>
-                            <div class="tooltip">
-                                <span class="material-icons hover small-icons">
-                                    image
-                                </span>
-                                <span class="tooltip-text">Add image</span>
-                            </div>
-                            <div class="tooltip">
-                                <span class="material-icons hover small-icons">
-                                    archive
-                                </span>
-                                <span class="tooltip-text">Archive</span>
-                            </div>
-                            <div class="tooltip">
-                                <span class="material-icons hover small-icons">
-                                    more_vert
-                                </span>
-                                <span class="tooltip-text">More</span>
-                            </div>
-                            <div class="tooltip">
-                                <span class="material-icons hover small-icons">
-                                    undo
-                                </span>
-                                <span class="tooltip-text">undo</span>
-                            </div>
-                            <div class="tooltip">
-                                <span class="material-icons hover small-icons">
-                                    redo
-                                </span>
-                                <span class="tooltip-text">redo</span>
-                            </div>
-                        </div>
-                        <button class="close-btn">Close</button>
-                       </div> 
-                    </form>
-                </div>
-                
-            </div>
-        </div>
+                            <button class="close-btn">Close</button>
+                           </div> 
+                        </form>
+                    </div>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cuid/2.1.6/browser-cuid.min.js" referrerpolicy="no-referrer"></script><script src="/notes.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js" referrerpolicy="no-referrer"></script>
     <script src="/notes.js"></script>
 </body>
 </html>
