--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             <div class="modal-content">
                 <div class="form-container">
                         <form class="form" id="modal-form">
-                            <input type="text" class="note-title" placeholder="Title">
-                            <input class="note-text" type="text" placeholder="Take a note....">
+                            <input type="text" id="modal-title" class="note-title" placeholder="Title">
+                            <input class="note-text" id="modal-text" type="text" placeholder="Take a note....">
                             <div class="form-actions">
                             <div class="icons">
                                 <div class="tooltip">
@@ -239,7 +239,7 @@
                                     <span class="tooltip-text">redo</span>
                                 </div>
                             </div>
-                            <button class="close-btn">Close</button>
+                            <button class="close-btn" id="modal-btn">Close</button>
                            </div> 
                         </form>
                     </div>
