--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
     <main>
         <div class="sidebar">
-            <div class="sidebar-items">
+            <div class="sidebar-items sidebar-active-items" >
                 <span class="material-icons hover active">lightbulb</span>
                 <span class="sidebar-text">Notes</span>
             </div>
